<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="linkCourse">https://practicum.yandex.ru/android-developer/</string>
    <string name="messageSup">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email">niketch1@yandex.ru</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clearStory">Очистить историю</string>
    <string name="youSearched">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_time">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_media_is_empty">Ваша медиатека пуста</string>
    <string name="no_one_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="sharePlaylist">Поделиться</string>
    <string name="editPlaylist">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="toast_share_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="comlete_playlist_creation">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="there_are_no_tracks">В этом плейлисте нет треков</string>
</resources>