<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="15dp"
    android:paddingTop="14dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:paddingBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSearch"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="@dimen/bottom_padding"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/app_black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/app_black"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonMedia"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="@dimen/bottom_padding"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/app_black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/app_black"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonSettings"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/app_black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/app_black"
            android:textAllCaps="false"/>


    </LinearLayout>
</LinearLayout>