<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/buttonBack"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/app_black"
            android:textSize="22sp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="64dp" />
        </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/app_black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginTop="@dimen/settings_text_margin_top"
            android:layout_marginBottom="@dimen/settings_text_margin_bot"
            android:layout_marginStart="@dimen/settings_text_margin_start"/>

        <Switch
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/app_black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginTop="@dimen/settings_text_margin_top"
            android:layout_marginBottom="@dimen/settings_text_margin_bot"
            android:layout_marginStart="@dimen/settings_text_margin_start"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/settings_icon_margin_top"
            android:layout_marginEnd="@dimen/settings_icon_margin_end"
            android:layout_marginBottom="@dimen/settings_icon_margin_bot"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/app_black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginTop="@dimen/settings_text_margin_top"
            android:layout_marginBottom="@dimen/settings_text_margin_bot"
            android:layout_marginStart="@dimen/settings_text_margin_start"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/settings_icon_margin_top"
            android:layout_marginEnd="@dimen/settings_icon_margin_end"
            android:layout_marginBottom="@dimen/settings_icon_margin_bot"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/app_black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginTop="@dimen/settings_text_margin_top"
            android:layout_marginBottom="@dimen/settings_text_margin_bot"
            android:layout_marginStart="@dimen/settings_text_margin_start"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/settings_icon_margin_top"
            android:layout_marginEnd="@dimen/settings_icon_margin_end"
            android:layout_marginBottom="@dimen/settings_icon_margin_bot"/>
    </FrameLayout>

</LinearLayout>
