<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/Barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="trackName"
            app:barrierDirection="top" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back_1"
            style="@style/TitleStyle"
            android:foreground="?attr/selectableItemBackground"/>

        <ImageView
            android:id="@+id/trackImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/buttonBack"
            app:layout_constraintBottom_toTopOf="@id/Barrier"
            tools:src="@drawable/icon_placeholder"/>

        <TextView
            android:id="@+id/trackName"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            tools:text="TrackName"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constrainedWidth="true"
            style="@style/TrackNameStyle"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="54dp"
            tools:text="ArtistName"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintBottom_toTopOf="@id/addButton"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/TrackNameStyle"
            app:layout_constrainedWidth="true"
            android:textSize="@dimen/artist_name_title"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginBottom="29dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/add_track"
            app:elevation="0dp"
            app:pressedTranslationZ="1dp"
            app:borderWidth="0dp"
            app:fabCustomSize="51dp"
            android:backgroundTint="@color/player_buttons"
            app:tint="@android:color/white"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@id/currentTrackTime"
            app:layout_constraintEnd_toStartOf="@+id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftBorder"/>

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintCircleRadius="69dp"
            android:layout_marginBottom="12dp"
            app:srcCompat="@drawable/play"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@id/addButton"
            app:layout_constraintBottom_toTopOf="@id/currentTrackTime"
            app:layout_constraintEnd_toStartOf="@id/likeButton"
            style="@style/TitleStyle"
            android:foreground="?attr/selectableItemBackground"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintCircleRadius="69dp"
            android:layout_marginBottom="12dp"
            app:srcCompat="@drawable/pause"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@id/addButton"
            app:layout_constraintBottom_toTopOf="@id/currentTrackTime"
            app:layout_constraintEnd_toStartOf="@id/likeButton"
            style="@style/TitleStyle"
            android:foreground="?attr/selectableItemBackground"
            android:visibility="gone"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/like"
            app:elevation="0dp"
            app:pressedTranslationZ="1dp"
            app:borderWidth="0dp"
            app:fabCustomSize="51dp"
            android:backgroundTint="@color/player_buttons"
            app:tint="@android:color/white"
            android:clickable="true"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"/>

        <TextView
            android:id="@+id/currentTrackTime"
            android:layout_marginBottom="39dp"
            tools:text="0:00"
            style="@style/TrackNameStyle"
            android:textSize="@dimen/artist_name_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintBottom_toTopOf="@id/duration"/>

        <TextView
            android:id="@+id/duration"
            android:layout_marginBottom="@dimen/track_information_gap"
            app:layout_goneMarginBottom="17dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintBottom_toTopOf="@id/album"
            style="@style/TrackInformationStyle" />

        <TextView
            android:id="@+id/trackTime"
            tools:text="0:0000000000000000000000000000000000000000000000"
            style="@style/TrackInformationStyle"
            android:textColor="@color/track_information"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/duration"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintBaseline_toBaselineOf="@id/duration"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/album"
            android:layout_marginBottom="@dimen/track_information_gap"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintBottom_toTopOf="@id/year"
            style="@style/TrackInformationStyle"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/trackAlbum"
            tools:text="Пусто"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/album"
            style="@style/TrackInformationStyle"
            android:textColor="@color/track_information"
            app:layout_constraintBaseline_toBaselineOf="@id/album"
            android:visibility="gone"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/year"
            android:layout_marginBottom="@dimen/track_information_gap"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintBottom_toTopOf="@id/genre"
            style="@style/TrackInformationStyle" />

        <TextView
            android:id="@+id/trackYear"
            tools:text="190018888888888888888888888888867777777777788888881"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/year"
            style="@style/TrackInformationStyle"
            android:textColor="@color/track_information"
            app:layout_constraintBaseline_toBaselineOf="@id/year"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/genre"
            android:layout_marginBottom="@dimen/track_information_gap"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintBottom_toTopOf="@id/country"
            style="@style/TrackInformationStyle" />

        <TextView
            android:id="@+id/trackGenre"
            tools:text="Rockaaaaaaaaaaaaaaasssssaaaaaaaaassssssssssssfffffsaaaaaaaa"
            app:layout_constraintStart_toEndOf="@id/genre"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            style="@style/TrackInformationStyle"
            android:textColor="@color/track_information"
            app:layout_constraintBaseline_toBaselineOf="@id/genre"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/country"
            android:layout_marginBottom="28dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/TrackInformationStyle" />

        <TextView
            android:id="@+id/trackCountry"
            tools:text="Японияaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaаааааааааааааааааааааaaa"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/country"
            style="@style/TrackInformationStyle"
            android:textColor="@color/track_information"
            app:layout_constraintBaseline_toBaselineOf="@id/country"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>